--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "author": "Felix Klotzsche",
     "dependencies":{
         "express": "3.x",
-        "mongoose": "3.x"
+        "mongoose": "3.x",
+        "q": "0.9.x"
     },
     "devDependencies": {
         "mocha": "1.x",
